--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -101,21 +101,7 @@
 }
 
 
-% email input begin
-\newread\fid
-\newcommand{\readfile}[1]% #1 = filename
-{\bgroup
-  \endlinechar=-1
-  \openin\fid=#1
-  \read\fid to\filetext
-  \loop\ifx\empty\filetext\relax% skip over comments
-    \read\fid to\filetext
-  \repeat
-  \closein\fid
-  \global\let\filetext=\filetext
-\egroup}
-\readfile{/Users/hectorbahamonde/Bibliografia_PoliSci/email.txt}
-% email input end
+
 
 
 %%% bib begin
@@ -186,7 +172,7 @@
 {\bf Profesor}: H\'ector Bahamonde, PhD.\\
 \texttt{e:}\href{mailto:hector.bahamonde@uoh.cl}{\texttt{hector.bahamonde@uoh.cl}}\\
 \texttt{w:}\href{http://www.hectorbahamonde.com}{\texttt{www.HectorBahamonde.com}}\\
-\texttt{Zoom ID:} \href{https://us02web.zoom.us/j/9513261038?pwd=S3BSWXQxZW11NC9CRjRoMmd0TkpEZz09}{\texttt{951-326-1038}}.\\
+%\texttt{Zoom ID:} \href{https://us02web.zoom.us/j/9513261038?pwd=S3BSWXQxZW11NC9CRjRoMmd0TkpEZz09}{\texttt{951-326-1038}}.\\
 {\bf Office Hours (Zoom)}: Toma una hora \href{https://calendly.com/bahamonde/officehours}{\texttt{aqu\'i}}.
 
 
@@ -194,24 +180,24 @@
 {\bf Hora de c\'atedra}: Lunes 14:30---16:00. Mi\'ercoles 14:30---16:00.\\
 {\bf Lugar de c\'atedra}: Zoom (no hay clases presenciales este semestre).\\
 
-{\bf Acceso a materiales del curso}: \href{https://ucampus.uoh.cl/uoh/2020/2/APU3602/1/}{\texttt{aqu\'i}}.
+%{\bf Acceso a materiales del curso}: \href{https://ucampus.uoh.cl/uoh/2020/2/APU3602/1/}{\texttt{aqu\'i}}.
 
 \vspace{5mm}
 {\bf Ayudante de c\'atedra (TA)}: Gonzalo Barr\'ia (Mg.).\\
 \texttt{e:}\href{mailto:gonzalo.barria@uoh.cl}{\texttt{gonzalo.barria@uoh.cl}}\\
 \texttt{Zoom ID:} 988-891-7227.\\
 {\bf TA Bio}: Gonzalo Barr\'ia es Cientista Pol\'itico (PUC) y Mag\'ister en Ciencia Pol\'itica (PUC).\\
-{\bf Hora de ayudant\'ia}: \emph{On-demand}.\\
-{\bf Lugar de ayudant\'ia}: Zoom (no hay ayudant\'ias presenciales este semestre).\\
+{\bf Hora de ayudant\'ia}: TBA.\\
+{\bf Lugar de ayudant\'ia}: TBA.\\
 
 
-\vspace{5mm}
-{\bf Carrera}:  Administraci\'on P\'ublica.\\
+%\vspace{5mm}
+%{\bf Carrera}:  Administraci\'on P\'ublica.\\
 %{\bf Eje de Formaci\'on}: PENDIENTE.\\
-{\bf Semestre/A\~no}: Sexto Semestre/2020.\\
+%{\bf Semestre/A\~no}: Sexto Semestre/2020.\\
 %{\bf Pre-requisitos}: PENDIENTE.\\
-{\bf SCT}: 6.\\
-{\bf Horas semanales}: C\'atedra (45-60 minutos v\'ia Zoom), Ayudant\'ia  (30-40 minutos v\'ia Zoom).
+%{\bf SCT}: 6.\\
+%{\bf Horas semanales}: C\'atedra (45-60 minutos v\'ia Zoom), Ayudant\'ia  (30-40 minutos v\'ia Zoom).
 %{\bf Semanas}:  12.
 
 
@@ -329,15 +315,15 @@ Clases tipo seminario v\'ia Zoom.
 	
   \item {\bf Midterm}: 25\%.
 
-		De un set de tres preguntas, escoger\'as una, y tendr\'as una semana para desarrollar tu respuesta. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Todos los textos, discusiones y ayudant\'ias podr\'ian ser consideradas. Las preguntas ser\'an relacionales. Lo que gu\'ia la pregunta (y la respuesta) es un tema. No un texto en particular. Es individual. Llegado el momento, se discuntir\'an los pormenores en clases y ayudant\'ia. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. Cuando comiences a prepararte, el ayudante y el profesor estar\'an disponibles para responder preguntas (e-mail y video-conferencia).
+		De un set de tres preguntas, escoger\'as una, y tendr\'as una semana para desarrollar tu respuesta. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Todos los textos, discusiones y ayudant\'ias podr\'ian ser consideradas. Las preguntas ser\'an relacionales. Lo que gu\'ia la pregunta (y la respuesta) es un tema. No un texto en particular. Es individual. Deber\'as entregar el ensayo en \texttt{uCampus}. Llegado el momento, se discuntir\'an los pormenores en clases y ayudant\'ia. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. Cuando comiences a prepararte, el ayudante y el profesor estar\'an disponibles para responder preguntas.
 
 	\item {\bf Ensayo Final (obligatorio; no eximible)}: 30\%. 
 
-	Durante la \'ultima clase se entregar\'a un temario de preguntas (de nuevo, enfocadas en temas m\'as que textos particulares). Tendr\'as que escoger una, y desarrollarla en formato ensayo \emph{in extenso}. Es individual. Deber\'as entregar el ensayo en \texttt{uCampus}. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. El ayudante y el profesor estar\'an disponibles para responder preguntas (e-mail y video-conferencia). Esta ayuda estar\'a antes y durante la prueba. 
+	Durante la \'ultima clase se entregar\'a un temario de preguntas (de nuevo, enfocadas en temas m\'as que textos particulares). Tendr\'as que escoger una, y desarrollarla en formato ensayo \emph{in extenso}. Es individual. Deber\'as entregar el ensayo en \texttt{uCampus}. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. El ayudante y el profesor estar\'an disponibles para responder preguntas.
 
 	\item {\bf Exposiciones individuales}: dos en total, 15\% cada una, 30\% en total.
 
-	Durante el semestre, tendr\'as que presentar en no mas de 10-12 minutos (pero nunca en menos de 5-8 minutos), y \underline{al comienzo de la clase}, uno de los textos que toca leer ese d\'ia. (Obviamente, ese d\'ia no podr\'as llegar atrasad$@$). Deber\'as estar preparad$@$ para responder preguntas del profesor y la audiencia. Deber\'as inscribir tus dos textos en \texttt{uCampus}. {\bf S\'olo hay una regla de asignaci\'on: el/la que llega primero/a, se queda con el texto}. {\bf S\'olo hay un/a expositor/a por texto; esto implica que pueden haber hasta un m\'aximo de dos presentaciones por clase}. Las exposiciones comienzan con el texto de la segunda clase. No son necesarios los \emph{slides} (``Power Point''). 
+	Durante el semestre, tendr\'as que presentar en no m\'as de 10-12 minutos (pero nunca en menos de 5-8 minutos), y \underline{al comienzo de la clase}, uno de los textos que toca leer ese d\'ia. (Obviamente, ese d\'ia no podr\'as llegar atrasad$@$). Deber\'as estar preparad$@$ para responder preguntas del profesor y la audiencia. Deber\'as inscribir tus dos textos en \texttt{uCampus}. {\bf S\'olo hay una regla de asignaci\'on: el/la que llega primero/a, se queda con el texto}. {\bf S\'olo hay un/a expositor/a por texto; esto implica que pueden haber hasta un m\'aximo de dos presentaciones por clase}. Las exposiciones comienzan con el texto de la segunda clase. No son necesarios los \emph{slides} (``Power Point''). 
 
 	\underline{Enf\'ocate en lo siguiente}:
 
@@ -374,7 +360,7 @@ Exposici\'on Individual \#2 	& 15\% & 100\%    \\
 
 \subsection*{Ayudant\'ia}
 
-Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad para ejercitar y seguir profundizando otras tem\'aticas pendientes. En esta oportunidad, tambi\'en se revisar\'an aspectos m\'as formales de las humanidades y las ciencias sociales. 
+Aqu\'i tendr\'as otra oportunidad para ejercitar y seguir profundizando otras tem\'aticas pendientes. En esta oportunidad, tambi\'en se revisar\'an aspectos m\'as formales de las humanidades y las ciencias sociales. 
 
 
 \subsection*{Calendario}
@@ -407,27 +393,29 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 					\item[$\circ$] Joseph Strayer. 1970. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Strayer.pdf}{\emph{On the Medieval Origins of the Modern State}}. Princeton University Press. Ch. 1.\phantom{\textcite{Strayer1970}}
 				\end{itemize}
 
-			\item[4.] {\bf Formaci\'on del Estado: Latinoam\'erica y Sudeste Asi\'atico}.
+			\item[4.] {\bf Formaci\'on del Estado: El Caso Latinoamericano}.
 				\begin{itemize}
 					\item[$\circ$] Miguel \'Angel Centeno. 1997. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Centeno.pdf}{``Blood and Debt: War and Taxation in Nineteenth-Century Latin America.''} \emph{American Journal of Sociology}, 102(6): 1565---1605.\phantom{\textcite{Centeno1997}} 
 
 					% dar este, y no el de slater.
-					%\item[$\circ$] Luis Schenoni. 2020. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Schenoni.pdf}{``Bringing War Back in: Victory and State Formation in Latin America.''} \emph{American Journal of Political Science}: 1---17.\phantom{\textcite{Schenoni2020}} 
+					\item[$\circ$] Luis Schenoni. 2021. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Schenoni.pdf}{``Bringing War Back in: Victory and State Formation in Latin America.''} \emph{American Journal of Political Science}, 65(2): 405---421.\phantom{\textcite{Schenoni2020}} 
 					
-					\item[$\circ$] Dan Slater. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Slater.pdf}{``Can Leviathan be Democratic? Competitive Elections, Robust Mass Politics, and State Infrastructural Power.''} \emph{Studies in Comparative International Development}, 43(3-4): 252---272.\phantom{\textcite{Slater2008}}
+					%\item[$\circ$] Dan Slater. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Slater.pdf}{``Can Leviathan be Democratic? Competitive Elections, Robust Mass Politics, and State Infrastructural Power.''} \emph{Studies in Comparative International Development}, 43(3-4): 252---272.\phantom{\textcite{Slater2008}}
 				\end{itemize}
 
 		\item[5.] {\bf Origen Institucional del Estado en Las Am\'ericas: ``\emph{Factor Endowments}'' y \emph{Property Rights}.}
 				\begin{itemize}
 					\item[$\circ$] Kenneth Sokoloff y Stanley Engerman. 2000. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Sokoloff_Engerman.pdf}{``Institutions, Factor Endowments, and Paths of Development in the New World''}. \emph{Journal of Economic Perspectives}, 14(3): 217---232.\phantom{\textcite{Sokoloff:2000ug}} 
-					\item[$\circ$] Daron Acemoglu, Simon Johnson y James Robinson. 2002. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Reversal_of_fortune.pdf}{``Reversal Fortune: Geography and Institutions in the Making of the Modern World Income Distribution''}. \emph{The Quarterly Journal of Economics}, 117(4): 1231---1294.\phantom{\textcite{Acemoglu:2002uh}} 
+					
+          \item[$\circ$] Daron Acemoglu, Simon Johnson y James Robinson. 2002. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Reversal_of_fortune.pdf}{``Reversal Fortune: Geography and Institutions in the Making of the Modern World Income Distribution''}. \emph{The Quarterly Journal of Economics}, 117(4): 1231---1294.\phantom{\textcite{Acemoglu:2002uh}} 
 				\end{itemize}
 
 
 		\item[6.] {\bf El Impacto de las Instituciones Coloniales en el Desarrollo Pol\'itico-Econ\'omico}.
 				\begin{itemize}
 					\item[$\circ$] Stephen Haber. 1991. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Haber.pdf}{``Industrial Concentration and the Capital Markets: A Comparative Study of Brazil, Mexico, and the United States, 1830–1930''}. \emph{The Journal of Economic History}, 51(3): 559---580.\phantom{\textcite{Haber1991}} 
-					\item[$\circ$]  James Mahoney. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mahoney_Colonialism_PostColonialsm.pdf}{\emph{Colonialism and Postcolonial Development: Spanish America in Comparative Perspective}}. Cambridge University Press. Ch. 1.\phantom{\textcite{Mahoney:2010aa}} 
+					
+          \item[$\circ$]  James Mahoney. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mahoney_Colonialism_PostColonialsm.pdf}{\emph{Colonialism and Postcolonial Development: Spanish America in Comparative Perspective}}. Cambridge University Press. Ch. 1.\phantom{\textcite{Mahoney:2010aa}} 
 
 					\item[{\Pointinghand}] {\bf El caso Chileno (\emph{paper} sugerido):}
 									\begin{enumerate}
@@ -439,23 +427,24 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 		\item[7.] {\bf Independencia e Instituciones Post-Coloniales de ``State-building''}.
 				\begin{itemize}
 					\item[$\circ$]  Marcus Kurtz. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kurtz_2013.pdf}{\emph{Latin American State-Building in Comparative Perspective: Social Foundations of Institutional Order}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Kurtz:2013aa}}
-					\item[$\circ$]  Hillel Soifer. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Soifer.pdf}{\emph{State Building in Latin America}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Soifer2015a}}
+					
+          \item[$\circ$]  Hillel Soifer. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Soifer.pdf}{\emph{State Building in Latin America}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Soifer2015a}}
 				\end{itemize}
 
 			\item[8.] {\bf Capacidad Estatal: El poder ``infraestructural'' del estado}.
 				\begin{itemize}
          	% dar este y no el de 2008 "revisited"
-         	%\item[$\circ$] Michael Mann. 1984 \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_1984.pdf}{``The Autonomous Power of the State: Its Origins, Mechanisms and Results.''} \emph{European Journal of Sociology}, 25(2): 185---213.\phantom{\textcite{Mann1984}} % dejar este
+         	\item[$\circ$] Michael Mann. 1984 \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_1984.pdf}{``The Autonomous Power of the State: Its Origins, Mechanisms and Results.''} \emph{European Journal of Sociology}, 25(2): 185---213.\phantom{\textcite{Mann1984}} % dejar este
 					
-					\item[$\circ$] Michael Mann. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_2008.pdf}{``Infrastructural Power Revisited.''} \emph{Studies in Comparative International Development}, 43(3-4): 355---365.\phantom{\textcite{Mann2008a}} % sacar este
+					%\item[$\circ$] Michael Mann. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_2008.pdf}{``Infrastructural Power Revisited.''} \emph{Studies in Comparative International Development}, 43(3-4): 355---365.\phantom{\textcite{Mann2008a}} % sacar este
 					
 					% opcion #1: dar este y no el de florian
 					%\item[$\circ$] Dan Slater. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Slater.pdf}{``Can Leviathan be Democratic? Competitive Elections, Robust Mass Politics, and State Infrastructural Power.''} \emph{Studies in Comparative International Development}, 43(3-4): 252---272.\phantom{\textcite{Slater2008}}
 
           % opcion #2: dar este y el de Mann. Me inclino por esta opcion mejor.
-          % \item[$\circ$] Jeffrey Herbst. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Herbst.pdf}{\emph{States and Power in Africa: Comparative Lessons in Authority and Control}}. Princeton University Press. Ch. 5 (``National Design and the Broadcasting of Power'').\phantom{\textcite{Herbst2015}}
+          \item[$\circ$] Jeffrey Herbst. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Herbst.pdf}{\emph{States and Power in Africa: Comparative Lessons in Authority and Control}}. Princeton University Press. Ch. 5 (``National Design and the Broadcasting of Power'').\phantom{\textcite{Herbst2015}}
 
-					\item[$\circ$]  Florian Hollenbach, Erik Wibbels and Michael Ward. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Hollenbach_2013.pdf}{``State Building and the Geography of Governance: Evidence From Satellites.''} \emph{Working Paper}.\phantom{\textcite{Hollenbach2013}} 
+					% \item[$\circ$]  Florian Hollenbach, Erik Wibbels and Michael Ward. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Hollenbach_2013.pdf}{``State Building and the Geography of Governance: Evidence From Satellites.''} \emph{Working Paper}.\phantom{\textcite{Hollenbach2013}} 
 				\end{itemize}
 
 
@@ -470,19 +459,22 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 			\item[9.] {\bf La \emph{Pol\'itica} de la Capacidad Estatal}.
 				\begin{itemize}
 					\item[$\circ$] Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo. 2020. ``The Political Origins of Institutional Weakness,'' en Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo, Eds. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Brinks_Levitsky_Murillo.pdf}{\emph{The Politics of Institutional Weakness in Latin America}}. Cambridge University Press, Ch. 1.\phantom{\textcite{Brinks2020}}
-					\item[$\circ$] Matthew Amengual and Eduardo Dargent. 2020. ``The Social Determinants of Enforcement: Integrating Politics with Limited State Capacity,'' en Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo, Eds. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Brinks_Levitsky_Murillo.pdf}{\emph{The Politics of Institutional Weakness in Latin America}}. Cambridge University Press, Ch. 7.\phantom{\textcite{Brinks2020}}
+					
+          \item[$\circ$] Matthew Amengual and Eduardo Dargent. 2020. ``The Social Determinants of Enforcement: Integrating Politics with Limited State Capacity,'' en Daniel Brinks, Steven Levitsky and Mar\'ia Victoria Murillo, Eds. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Brinks_Levitsky_Murillo.pdf}{\emph{The Politics of Institutional Weakness in Latin America}}. Cambridge University Press, Ch. 7.\phantom{\textcite{Brinks2020}}
 				\end{itemize}
 
 
 
-		\item[10.] {\bf ¿Podr\'ia no existir el Estado? Dificultades Geogr\'aficas y Disidencia en el Sudeste Asi\'atico y \'Africa.}
+		\item[10.] {\bf ¿Podr\'ia no existir el Estado? Dificultades Geogr\'aficas y Disidencia en el Sudeste Asi\'atico}.
 				\begin{itemize}
-          \item[$\circ$] Jeffrey Herbst. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Herbst.pdf}{\emph{States and Power in Africa: Comparative Lessons in Authority and Control}}. Princeton University Press. Ch. 5 (``National Design and the Broadcasting of Power'').\phantom{\textcite{Herbst2015}}
+          
+          %\item[$\circ$] Jeffrey Herbst. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Herbst.pdf}{\emph{States and Power in Africa: Comparative Lessons in Authority and Control}}. Princeton University Press. Ch. 5 (``National Design and the Broadcasting of Power'').\phantom{\textcite{Herbst2015}}
 
           \item[$\circ$] James Scott. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Scott.pdf}{\emph{The Art of Not Being Governed: An Anarchist History of Upland Southeast Asia}}. Yale University Press. Ch. 1.\phantom{\textcite{Scott2010}}
 
           % no dar el de Herbst pero dar el 5to capitulo de Scott: cambiar el titulo a "¿Podr\'ia no existir el Estado? Dificultades Geogr\'aficas y Disidencia en el Sudeste Asi\'atico"
-          % \item[$\circ$] James Scott. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Scott.pdf}{\emph{The Art of Not Being Governed: An Anarchist History of Upland Southeast Asia}}. Yale University Press. Ch. 5.\phantom{\textcite{Scott2010}}
+          
+          \item[$\circ$] James Scott. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Scott.pdf}{\emph{The Art of Not Being Governed: An Anarchist History of Upland Southeast Asia}}. Yale University Press. Ch. 5.\phantom{\textcite{Scott2010}}
 					
 
                     \item[{\Pointinghand}] {\bf Material audiovisual sugerido:}
@@ -509,29 +501,31 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 			\item[11.] {\bf Or\'igenes del Capitalismo: Libre Mercado, Instituciones Pol\'iticas y Revoluci\'on Industrial}.
 				\begin{itemize}
-					\item[$\circ$]  Douglass North. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North.pdf}{\emph{Institutions, Institutional Change and Economic Performance}}. Cambridge University Press. ``Part 1: Institutions'': 3---69.\phantom{\textcite{North1990}}
+					%\item[$\circ$]  Douglass North. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North.pdf}{\emph{Institutions, Institutional Change and Economic Performance}}. Cambridge University Press. ``Part 1: Institutions'': 3---69.\phantom{\textcite{North1990}}
 
 					% dar este y no North1990
-          % \item[$\circ$]  Douglass North. 1981. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North_1981.pdf}{\emph{Structure and Change in Economic History}}. W.W. Norton. ``Part I: Theory'': 3---71.\phantom{\textcite{North1981}}
+         \item[$\circ$]  Douglass North. 1981. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North_1981.pdf}{\emph{Structure and Change in Economic History}}. W.W. Norton. ``Part I: Theory'': 3---71.\phantom{\textcite{North1981}}
          			
-         			 \item[$\circ$] Cheryl Schonhardt-Bailey. 2006. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Corn_Laws.pdf}{\emph{From the Corn Laws to Free Trade: Interests, Ideas, and Institutions in Historical Perspective}}. The MIT Press. Ch. 1\phantom{\textcite{Schonhardt-Bailey2006}}
+         \item[$\circ$] Cheryl Schonhardt-Bailey. 2006. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Corn_Laws.pdf}{\emph{From the Corn Laws to Free Trade: Interests, Ideas, and Institutions in Historical Perspective}}. The MIT Press. Ch. 1\phantom{\textcite{Schonhardt-Bailey2006}}
         \end{itemize}
 
 
-        % dar ambos capitulos 11 y 12, no solo 12. da mejor contexto a la clase y refuerza contenidos de north
 			\item[12.] {\bf \emph{Property Rights} y Revoluci\'on Industrial: ¿Fu\'e por los Incentivos Individuales?}
+        % dar ambos capitulos 11 y 12, no solo 12. da mejor contexto a la clase y refuerza contenidos de north
+
 				\begin{itemize} 
-					%\item[$\circ$]  Gregory Clark. 2007. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Clark.pdf}{\emph{A Farewell to Alms: A Brief Economic History of the World}}. Princeton University Press. Ch.: 11.\phantom{\textcite{Clark2007}}
+					\item[$\circ$]  Gregory Clark. 2007. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Clark.pdf}{\emph{A Farewell to Alms: A Brief Economic History of the World}}. Princeton University Press. Ch.: 11.\phantom{\textcite{Clark2007}}
 					\item[$\circ$]  Gregory Clark. 2007. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Clark.pdf}{\emph{A Farewell to Alms: A Brief Economic History of the World}}. Princeton University Press. Ch.: 12.\phantom{\textcite{Clark2007}}
 				\end{itemize}
 
 
 			\item[13.] {\bf Representaci\'on Pol\'itica y \'Elites Econ\'omicas: El Pr\'estamo}.
 				\begin{itemize}
-          			\item[$\circ$]  David Stasavage. 2011. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Stasavage.pdf}{\emph{States of Credit: Size, Power, and the Development of European Polities}}. Princeton University Press. Ch.: 1 (``Introduction'').\phantom{\textcite{Stasavage2011}}
+          			%\item[$\circ$]  David Stasavage. 2011. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Stasavage.pdf}{\emph{States of Credit: Size, Power, and the Development of European Polities}}. Princeton University Press. Ch.: 1 (``Introduction'').\phantom{\textcite{Stasavage2011}}
           			% dar estos en vez, mismo orden
-          			%\item[$\circ$] Douglass North and Barry Weingast. 1989. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North_Weingast_1989.pdf}{``Constitutions and Commitment: The Evolution of Institutions Governing Public Choice in Seventeenth-Century England''}. \emph{The Journal of Economic History} 49(4): 803---832.\phantom{\textcite{North1989}}
-          			%\item[$\circ$] David Stasavage. 2007. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Stasavage_2007.pdf}{``Partisan Politics and Public Debt: The Importance of the 'Whig Supremacy' for Britain's Financial Revolution''}. \emph{European Review of Economic History} 11(1): 123---153.\phantom{\textcite{Stasavage2007a}}
+          			\item[$\circ$] Douglass North and Barry Weingast. 1989. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North_Weingast_1989.pdf}{``Constitutions and Commitment: The Evolution of Institutions Governing Public Choice in Seventeenth-Century England''}. \emph{The Journal of Economic History} 49(4): 803---832.\phantom{\textcite{North1989}}
+          			
+                \item[$\circ$] David Stasavage. 2007. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Stasavage_2007.pdf}{``Partisan Politics and Public Debt: The Importance of the 'Whig Supremacy' for Britain's Financial Revolution''}. \emph{European Review of Economic History} 11(1): 123---153.\phantom{\textcite{Stasavage2007a}}
        			 \end{itemize}
 
 
@@ -552,23 +546,30 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 			\item[15.] {\bf Mecanismos Desigualizantes del Capitalismo e Instituciones Coloniales}.
 				\begin{itemize}
 					\item[$\circ$] Elisa Mariscal and Kenneth L. Sokoloff. 2000. ``Schooling, Suffrage, and the Persistence of Inequality in the Americas, 1800-1945'', en Stephen Harber, Ed. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Political_Institutions_Haber.pdf}{\emph{Political Institutions and Economic Growth in Latin America}}.\phantom{\textcite{Haber2000}}
+          
           \item[$\circ$] Thomas Piketty. 2014.  \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Piketty_El_capital.pdf}{``Capital in the Twenty-First Century''}. Fondo de Cultura Econ\'omica. Ch.: ``Introducci\'on''.\phantom{\textcite{Piketty:2015aa}}
 				\end{itemize}
 
 
 			\item[16.] {\bf Tipos de Estados de Bienestar}.
 				\begin{itemize}
-          \item[$\circ$] Gosta Esping-Andersen. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Esping_Andersen.pdf}{``The Three Worlds of Welfare Capitalism''}. Polity Press. Ch.: 1 y 2.\phantom{\textcite{Esping-Andersen1990}}
+          \item[$\circ$] Gosta Esping-Andersen. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Esping_Andersen.pdf}{``The Three Worlds of Welfare Capitalism''}. Polity Press. Ch.: 1.\phantom{\textcite{Esping-Andersen1990}}
+          
+          \item[$\circ$] Gosta Esping-Andersen. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Esping_Andersen.pdf}{``The Three Worlds of Welfare Capitalism''}. Polity Press. Ch.: 2.\phantom{\textcite{Esping-Andersen1990}}
+
         \end{itemize}
 
 
 			\item[17.] {\bf Impuestos, Desigualdad y Variedades de Democracia: El Rol del Estado}.
 				\begin{itemize}
-					\item[$\circ$] Kenneth Scheve and David Stasavage. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Taxing_The_Rich.pdf}{``Taxing the Rich: A History of Fiscal Fairness in the United States and Europe''}. Princeton University Press. Ch. 1.\phantom{\textcite{Scheve2016}}
-					\item[$\circ$] Alberto Alesina, Edward Glaeser y Bruce Sacerdote. 2001.\href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Alesina_et_al.pdf}{``Why Doesn't the United States Have a European-Style Welfare State?''} Brookings Papers on Economic Activity \#1933: 1---66.\phantom{\textcite{Alesina2001}}
+					
+          \item[$\circ$] Kenneth Scheve and David Stasavage. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Taxing_The_Rich.pdf}{``Taxing the Rich: A History of Fiscal Fairness in the United States and Europe''}. Princeton University Press. Ch. 1.\phantom{\textcite{Scheve2016}}
+					
+          %\item[$\circ$] Alberto Alesina, Edward Glaeser y Bruce Sacerdote. 2001.\href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Alesina_et_al.pdf}{``Why Doesn't the United States Have a European-Style Welfare State?''} Brookings Papers on Economic Activity \#1933: 1---66.\phantom{\textcite{Alesina2001}}
+         
           % dar este en vez de Alesina's, pero ver bien que capitulo
           
-          %\item[$\circ$] Theda Skocpol. 1995.\href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Skocpol_1995.pdf}{``Protecting Soldiers and Mothers: The Political Origins of Social Policy in United States''} Harvard University Press. Ch.: ???.\phantom{\textcite{Alesina2001}}
+          \item[$\circ$] Theda Skocpol. 1995.\href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Skocpol_1995.pdf}{``Protecting Soldiers and Mothers: The Political Origins of Social Policy in United States''} Harvard University Press: Introduction, Understanding the Origins of Modern Social Provision in the United States.%\phantom{\textcite{Alesina2001}}
 
           % O dar Trasberg-Bahamonde.
 
@@ -578,30 +579,39 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 			\item[18.] {\bf Reformas Pol\'iticas de Bienestar en Latino Am\'erica, Asia y Europa del Este: Restricciones Fiscales y Reg\'imenes Pol\'iticos}.
 				\begin{itemize}
-					\item[$\circ$] Stephan Haggard y Robert Kaufman. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kaufman_Welfare.pdf}{``Development, Democracy, and Welfare States''}. Princeton University Press. Ch. 2 y 5.\phantom{\textcite{Haggard2008a}}
+					\item[$\circ$] Stephan Haggard y Robert Kaufman. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kaufman_Welfare.pdf}{``Development, Democracy, and Welfare States''}. Princeton University Press. Ch. 2.\phantom{\textcite{Haggard2008a}}
+
+          \item[$\circ$] Stephan Haggard y Robert Kaufman. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kaufman_Welfare.pdf}{``Development, Democracy, and Welfare States''}. Princeton University Press. Ch. 5.\phantom{\textcite{Haggard2008a}}
+
         \end{itemize}
 
 
 			\item[19.] {\bf Transici\'on Democr\'atica y Liberalizaci\'on Econ\'omica en Latino Am\'erica}.
 				\begin{itemize}
-					\item[$\circ$] Hector Schamis. 1999. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Schamis_1999.pdf}{``Distributional Coalitions and the Politics of Economic Reform in Latin America''}. \emph{World Politics} 51(2): 236---268.\phantom{\textcite{Schamis1999}}
+					
+          \item[$\circ$] Hector Schamis. 1999. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Schamis_1999.pdf}{``Distributional Coalitions and the Politics of Economic Reform in Latin America''}. \emph{World Politics} 51(2): 236---268.\phantom{\textcite{Schamis1999}}
           % Dar Bahamonde and Trasberg en vez de Shamis y CAMBIAR TITULO
-					\item[$\circ$] Gustavo Flores-Mac\'ias. 2010.  \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Flores_Macias_2010.pdf}{``Statist vs. Pro-Market: Explaining Leftist Governments' Economic Policies in Latin America''}. \emph{Comparative Politics} 42(4): 413---433.\phantom{\textcite{Flores-Macias2010}}
+					
+          \item[$\circ$] Gustavo Flores-Mac\'ias. 2010.  \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Flores_Macias_2010.pdf}{``Statist vs. Pro-Market: Explaining Leftist Governments' Economic Policies in Latin America''}. \emph{Comparative Politics} 42(4): 413---433.\phantom{\textcite{Flores-Macias2010}}
 				\end{itemize}
 
 
 			\item[20.] {\bf Desigualdad en Latino Am\'erica}.
 				\begin{itemize}
 					%\item[{\color{red}$\circ$}] Williamson, J. (2015). “Latin American Inequality: Colonial Origins, Commodity Booms, or a Missed 20th Century Leveling?” National Bureau of Economic Research, Working Paper 20915. TEXTO PEDIDO AL AUTOR; UNPUBLISHED
-					\item[$\circ$] Juan Ariel Bogliaccini. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Bogliaccini.pdf}{``Trade Liberalization, Deindustrialization, and Inequality''}. \emph{Latin American Research Review} 48(2): 79---105.\phantom{\textcite{Bogliaccini2013}}
-					\item[$\circ$] Jana Morgan and Nathan Kelly. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Morgan_Kelly.pdf}{``Market Inequality and Redistribution in Latin America and the Caribbean''}. \emph{The Journal of Politics} 75(3): 672---685.\phantom{\textcite{Morgan2013}}
+					
+          \item[$\circ$] Juan Ariel Bogliaccini. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Bogliaccini.pdf}{``Trade Liberalization, Deindustrialization, and Inequality''}. \emph{Latin American Research Review} 48(2): 79---105.\phantom{\textcite{Bogliaccini2013}}
+					
+          \item[$\circ$] Jana Morgan and Nathan Kelly. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Morgan_Kelly.pdf}{``Market Inequality and Redistribution in Latin America and the Caribbean''}. \emph{The Journal of Politics} 75(3): 672---685.\phantom{\textcite{Morgan2013}}
 				\end{itemize}
 
 
 			\item[21.] {\bf Condiciones de Redistribuci\'on en Autocracias y Democracias}.
 				\begin{itemize}
-					\item[$\circ$] Michael Albertus. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Albertus_2015.pdf}{``Autocracy and Redistribution: The Politics of Land Reform}. Cambridge University Press. Ch. 1.\phantom{\textcite{Albertus2015}}
-					\item[$\circ$] Michael Dorsch and Paul Maarek. 2019. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Dorsch_2019.pdf}{``Democratization and the Conditional Dynamics of Income Distribution''}. \emph{American Political Science Review} 113(2): 385---404.\phantom{\textcite{Dorsch2019}}
+					
+          \item[$\circ$] Michael Albertus. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Albertus_2015.pdf}{``Autocracy and Redistribution: The Politics of Land Reform}. Cambridge University Press. Ch. 1.\phantom{\textcite{Albertus2015}}
+					
+          \item[$\circ$] Michael Dorsch and Paul Maarek. 2019. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Dorsch_2019.pdf}{``Democratization and the Conditional Dynamics of Income Distribution''}. \emph{American Political Science Review} 113(2): 385---404.\phantom{\textcite{Dorsch2019}}
 				\end{itemize}
 
 
