--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -177,7 +177,7 @@
 
 
 \vspace{5mm}
-{\bf Hora de c\'atedra}: Lunes 14:30---16:00. Mi\'ercoles 14:30---16:00.\\
+{\bf Hora de c\'atedra}: M y W (10:15---11:45).\\
 {\bf Lugar de c\'atedra}: Zoom (no hay clases presenciales este semestre).\\
 
 %{\bf Acceso a materiales del curso}: \href{https://ucampus.uoh.cl/uoh/2020/2/APU3602/1/}{\texttt{aqu\'i}}.
@@ -185,7 +185,6 @@
 \vspace{5mm}
 {\bf Ayudante de c\'atedra (TA)}: Gonzalo Barr\'ia (Mg.).\\
 \texttt{e:}\href{mailto:gonzalo.barria@uoh.cl}{\texttt{gonzalo.barria@uoh.cl}}\\
-\texttt{Zoom ID:} 988-891-7227.\\
 {\bf TA Bio}: Gonzalo Barr\'ia es Cientista Pol\'itico (PUC) y Mag\'ister en Ciencia Pol\'itica (PUC).\\
 {\bf Hora de ayudant\'ia}: TBA.\\
 {\bf Lugar de ayudant\'ia}: TBA.\\
